--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@testing-library/user-event": "^13.2.1",
     "animate.css": "^4.1.1",
     "emailjs-com": "^3.2.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
